--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1855,6 +1855,9 @@ body{
 // coming soon page
 
 .coming_soon{
+    .row{
+        padding-top: 130px;
+    }
     display: flex;
     align-items: center;
     height: 100vh;
@@ -2410,6 +2413,9 @@ body{
     }
     // coming_soon page
     .coming_soon{
+        .row{
+            padding-top: 130px;
+        }
         padding-top: 55px;
         height: auto !important;
     }
