--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2241,6 +2241,18 @@ body {
   .why_us .row .text_para {
     font-size: 1rem;
   }
+  .why_us .row .coming_soon_email {
+    padding: 0px 15px;
+  }
+  .why_us .row .coming_soon_email input {
+    width: 100%;
+  }
+  .why_us .row .coming_soon_email .desktop_btn {
+    display: none;
+  }
+  .why_us .row .coming_soon_email .mobile_btn {
+    display: block !important;
+  }
   .our_secrets .text h1 {
     font-size: 2rem;
   }
@@ -2422,6 +2434,9 @@ body {
   .coming_soon .row {
     padding-top: 130px;
   }
+  .email_error {
+    top: 14px !important;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -2558,6 +2573,18 @@ body {
   }
   .why_us .row .desktop_responce_img {
     display: none;
+  }
+  .why_us .row .coming_soon_email {
+    padding: 0px 15px;
+  }
+  .why_us .row .coming_soon_email input {
+    width: 100%;
+  }
+  .why_us .row .coming_soon_email .desktop_btn {
+    display: none;
+  }
+  .why_us .row .coming_soon_email .mobile_btn {
+    display: block !important;
   }
   .our_secrets {
     padding-bottom: 15%;
@@ -2906,5 +2933,121 @@ body {
     padding-top: 55px;
     height: auto !important;
   }
+  .email_error {
+    top: 14px !important;
+  }
+}
+
+.modal .modal-confirm {
+  color: #434e65;
+  width: 525px;
+}
+
+.modal .modal-confirm .modal-content {
+  padding: 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+}
+
+.modal .modal-confirm .modal-content .modal-header {
+  background: #47c9a2;
+  border-bottom: none;
+  position: relative;
+  text-align: center;
+  margin: -20px -20px 0;
+  border-radius: 5px 5px 0 0;
+  padding: 35px;
+}
+
+.modal .modal-confirm .modal-content h4 {
+  text-align: center;
+  font-size: 36px;
+  margin: 10px 0;
+}
+
+.modal .modal-confirm .modal-content .form-control {
+  min-height: 40px;
+  border-radius: 3px;
+}
+
+.modal .modal-confirm .modal-content .btn {
+  min-height: 40px;
+  border-radius: 3px;
+}
+
+.modal .modal-confirm .modal-content .close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #fff;
+  text-shadow: none;
+  opacity: 0.5;
+}
+
+.modal .modal-confirm .modal-content .close:hover {
+  opacity: 0.8;
+}
+
+.modal .modal-confirm .modal-content .icon-box {
+  color: #fff;
+  width: 95px;
+  height: 95px;
+  display: inline-block;
+  border-radius: 50%;
+  z-index: 9;
+  border: 5px solid #fff;
+  padding: 15px;
+  text-align: center;
+  margin: auto;
+}
+
+.modal .modal-confirm .modal-content .icon-box i {
+  font-size: 64px;
+  margin: -4px 0 0 -4px;
+}
+
+.modal .modal-confirm .modal-content .modal-dialog {
+  margin-top: 100px;
+}
+
+.modal .modal-confirm .modal-content .btn {
+  color: #fff;
+  border-radius: 4px;
+  background: #eeb711;
+  text-decoration: none;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  line-height: normal;
+  border-radius: 30px;
+  margin-top: 10px;
+  padding: 6px 20px;
+  border: none;
+}
+
+.modal .modal-confirm .modal-content .btn:hover {
+  outline: none;
+  background: #eda645;
+}
+
+.modal .modal-confirm .modal-content .btn .btn:focus {
+  background: #eda645;
+  outline: none;
+}
+
+.modal .modal-confirm .modal-content .btn span {
+  margin: 1px 3px 0;
+  float: left;
+}
+
+.modal .modal-confirm .modal-content .btn i {
+  margin-left: 1px;
+  font-size: 20px;
+  float: right;
+}
+
+.modal .modal-confirm .modal-content .trigger-btn {
+  display: inline-block;
+  margin: 100px auto;
 }
 /*# sourceMappingURL=styles.css.map */
