--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2136,6 +2136,18 @@ body{
             .text_para{
                 font-size: 1rem;
             }
+            .coming_soon_email{
+                padding: 0px 15px;
+                input{
+                    width: 100%;
+                }
+                .desktop_btn{
+                    display: none;
+                }
+                .mobile_btn{
+                    display: block !important;
+                }
+            }
         }
     }
 
@@ -2419,6 +2431,9 @@ body{
         padding-top: 55px;
         height: auto !important;
     }
+    .email_error{
+        top: 14px !important;
+    }
 
 }
 // Small devices (portrait tablets and large phones, 600px and up) */
@@ -2589,6 +2604,19 @@ body{
         }
         .desktop_responce_img{
             display: none;
+        }
+
+        .coming_soon_email{
+            padding: 0px 15px;
+            input{
+                width: 100%;
+            }
+            .desktop_btn{
+                display: none;
+            }
+            .mobile_btn{
+                display: block !important;
+            }
         }
       }
   }
@@ -3001,10 +3029,127 @@ body{
 
 
 // coming_soon page
+
 .coming_soon{
     padding-top: 55px;
     height: auto !important;
 }
 
+.email_error{
+    top: 14px !important;
+}
 
+
+}
+
+
+
+// modal 
+.modal {
+.modal-confirm {		
+    color: #434e65;
+    width: 525px;
+.modal-content {
+    padding: 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+.modal-header {
+    background: #47c9a2;
+    border-bottom: none;   
+    position: relative;
+    text-align: center;
+    margin: -20px -20px 0;
+    border-radius: 5px 5px 0 0;
+    padding: 35px;
+}
+h4 {
+    text-align: center;
+    font-size: 36px;
+    margin: 10px 0;
+}
+.form-control{
+    min-height: 40px;
+    border-radius: 3px; 
+} 
+.btn {
+    min-height: 40px;
+    border-radius: 3px; 
+}
+.close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    color: #fff;
+    text-shadow: none;
+    opacity: 0.5;
+}
+.close{
+    &:hover {
+        opacity: 0.8;
+    }
+}
+.icon-box {
+    color: #fff;		
+    width: 95px;
+    height: 95px;
+    display: inline-block;
+    border-radius: 50%;
+    z-index: 9;
+    border: 5px solid #fff;
+    padding: 15px;
+    text-align: center;
+    margin: auto;
+}
+.icon-box{
+    i {
+        font-size: 64px;
+        margin: -4px 0 0 -4px;
+    } 
+}
+.modal-dialog {
+    margin-top: 100px;
+}
+.btn {
+    color: #fff;
+    border-radius: 4px;
+    background: #eeb711;
+    text-decoration: none;
+    transition: all 0.4s;
+    line-height: normal;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 6px 20px;
+    border: none;
+}
+.btn{
+    &:hover{
+        outline: none;
+        background: #eda645;
+    } 
+    .btn:focus {
+        background: #eda645;
+        outline: none;
+    }
+}
+    
+.btn{
+    span {
+        margin: 1px 3px 0;
+        float: left;
+    } 
+}
+.btn {
+    i {
+        margin-left: 1px;
+        font-size: 20px;
+        float: right;
+    }
+}
+.trigger-btn {
+    display: inline-block;
+    margin: 100px auto;
+}
+}
+}
 }
