--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -851,6 +851,25 @@ body{
                 padding-top: 2px;
             }
         }
+        tapSection{
+            padding: 0px 30px;
+            border-right: 1px solid rgba(0, 0, 0, 0.14);;
+            span{
+                border-radius: 36px;
+                padding: 14px 25px;
+                cursor: pointer;
+                &:hover{
+                    background-color: #ffffff;
+                    box-shadow: 0 10px 1px 0 #deedf1;
+                    transition: all 0.2s;
+                }
+            }
+            .active{
+                color: #30b67b;
+                background-color: #ffffff;
+                box-shadow: 0 10px 1px 0 #deedf1;
+            }
+        }
         .coming_soon_email{
             margin-top: 50px;
             // margin-left: 16px;  
@@ -1861,6 +1880,92 @@ body{
     display: flex;
     align-items: center;
     height: 100vh;
+}
+
+// Our approach
+
+.our_approach_title{
+    filter: brightness(0.95);
+    background-image: url("../images/bg_wave.svg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    text-align: center;
+    height: 100vh;
+    display: flex;
+    .banner_flag{
+        p{
+            border-radius: 4px;
+            color: #fff;
+            padding: 8px 14px;
+            width: 317px;
+            font-size: 16px;
+            margin: auto;
+            margin-bottom: 30px;
+            background-image: linear-gradient(to left, #9e8eff, #23d9de);
+        }
+    }
+    .title{
+        p{
+            font-size: 58px;
+            color: #222c5d;
+            line-height: 1.31;
+            margin-bottom: 30px;
+        }
+    }
+    .sub_text{
+        p{
+            font-size: 24px;
+            color: $text-tertiary-color;
+        }
+    }
+    .move_next_section{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        img{
+            width: 21px;
+            cursor: pointer;
+        }
+        .bounce {
+        -moz-animation: bounce 2s infinite;
+        -webkit-animation: bounce 2s infinite;
+        animation: bounce 2s infinite;
+        }
+          
+        @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+        }
+        40% {
+            transform: translateY(-30px);
+        }
+        60% {
+            transform: translateY(-15px);
+        }
+        }
+    }
+}
+
+.product_planing{
+    .list_of_team{
+        padding: 40px 0px;
+        .team_icon{
+            width: 69px;
+            height: 69px;
+            border-radius: 23.5px;
+            box-shadow: 0 12px 16px 0 #f2f7ff;
+            background-color: #ffffff;
+
+            margin: 10px 42px 10px 0px;
+            display: flex;
+            cursor: pointer;
+            i{
+                font-size: 24px;
+                margin: auto;
+            }
+        }
+    }
 }
 
 // All media qurys
@@ -3037,6 +3142,12 @@ body{
 
 .email_error{
     top: 14px !important;
+}
+
+// Our approach
+
+.our_approach_title{
+    height: 100vh;
 }
 
 
