--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,40 @@
 @charset "UTF-8";
 body {
   overflow-x: hidden !important;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-perspective: 1000;
+          perspective: 1000;
+}
+
+.section {
+  height: 100%;
+  width: calc( 100% / 5);
+  float: left;
+  position: relative;
+}
+
+.sections {
+  width: 500%;
+  height: 100%;
+}
+
+.section__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 30px;
+  color: #fff;
 }
 
 @font-face {
