--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1938,13 +1938,14 @@ body{
 // Our approach
 
 .our_approach_title{
-    filter: brightness(0.95);
+    // filter: brightness(0.95);
+    position: relative;
     background-image: url("../images/bg_wave.svg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
     text-align: center;
-    height: 100vh;
+    height: 88vh;
     display: flex;
     .banner_flag{
         p{
@@ -2002,7 +2003,7 @@ body{
 
 .product_planing{
     .list_of_team{
-        padding: 40px 0px;
+        padding: 2% 0px;
         .team_icon{
             width: 69px;
             height: 69px;
@@ -2010,7 +2011,7 @@ body{
             box-shadow: 0 12px 16px 0 #f2f7ff;
             background-color: #ffffff;
 
-            margin: 10px 42px 10px 0px;
+            margin: 10px 21px 10px 21px;
             display: flex;
             cursor: pointer;
             i{
@@ -2150,6 +2151,11 @@ body{
                 }
             }
         }
+    }
+    // Our approach
+
+    .our_approach_title{
+        height: 100vh;
     }
 
 }
@@ -2591,6 +2597,22 @@ body{
     }
     .email_error{
         top: 14px !important;
+    }
+
+    // Our approach
+
+    .our_approach_title{
+        height: 80vh;
+        .title{
+            p{
+                font-size: 30px;
+            }
+        }
+        .sub_text{
+            p{
+                font-size: 19px;
+            }
+        }
     }
 
 }
@@ -3200,7 +3222,39 @@ body{
 // Our approach
 
 .our_approach_title{
-    height: 100vh;
+    height: 80vh;
+    .banner_flag{
+        p{
+            padding: 8px 0px;
+            width: 255px;
+            font-size: 14px;
+        }
+    }
+    .title{
+        p{
+            font-size: 30px;
+        }
+    }
+    .sub_text{
+        p{
+            font-size: 19px;
+        }
+    }
+}
+
+.product_planing{
+    padding: 40px 0px;
+    .list_of_team{
+        .team_icon{
+            width: 50px;
+            height: 50px;
+            border-radius: 16.5px;
+            margin: auto;
+            i{
+                font-size: 19px;
+            }
+        }
+    }
 }
 
 
