--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2193,9 +2193,31 @@ body {
   }
 }
 
+.tap_fixed {
+  position: fixed;
+  height: auto !important;
+  opacity: 1 !important;
+  width: 100%;
+  background-color: #fff;
+  z-index: 1000 !important;
+  top: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  display: block !important;
+}
+
+.tap_fixed .list_of_team {
+  padding: 1% 0px !important;
+}
+
 .product_planing .list_of_team {
   padding: 2% 0px;
   color: #595959;
+}
+
+.product_planing .list_of_team .nav_menu {
+  margin: 0px 21px;
+  width: 69px;
 }
 
 .product_planing .list_of_team .team_icon {
