tap header contant

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -927,6 +927,21 @@ body{
                 border-radius: 6px;
                 background-color: #52a28e;
             }
+            .active_build{
+                color: #fff;
+                border-radius: 6px;
+                background-color: #52a28e;
+            }
+            .active_deploy{
+                color: #fff;
+                border-radius: 6px;
+                background-color: #52a28e;
+            }
+            .active_launch{
+                color: #fff;
+                border-radius: 6px;
+                background-color: #52a28e;
+            }
         }
         .coming_soon_email{
             margin-top: 50px;
