--- a/styles/styles.css
+++ b/styles/styles.css
@@ -997,6 +997,24 @@ body {
   background-color: #52a28e;
 }
 
+.why_us .row tapSection .active_build {
+  color: #fff;
+  border-radius: 6px;
+  background-color: #52a28e;
+}
+
+.why_us .row tapSection .active_deploy {
+  color: #fff;
+  border-radius: 6px;
+  background-color: #52a28e;
+}
+
+.why_us .row tapSection .active_launch {
+  color: #fff;
+  border-radius: 6px;
+  background-color: #52a28e;
+}
+
 .why_us .row .coming_soon_email {
   margin-top: 50px;
   padding: 10px 16px;
