--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2033,7 +2033,7 @@ body{
     // padding: 1% 0px;
     display: block !important;
     .list_of_team{
-        padding: 1% 0px !important;
+        // padding: 1% 0px !important;
     }
 }
 
@@ -2042,8 +2042,9 @@ body{
         .nav_menu{
             margin: 0px 21px;
             width: 69px;
+            padding: 14px;
         }
-        padding: 2% 0px;
+        // padding: 2% 0px;
         color: #595959;
         .team_icon{
             z-index: 1;
@@ -2064,6 +2065,7 @@ body{
             }
         }
         .active_section_tap{
+            border-bottom: 2px solid;
             .team_icon{
                 border: 3px solid #fff !important;
                 background-color: #30b67b !important;
