tap header contant sdcs jbas

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2224,7 +2224,16 @@ body {
   display: block !important;
 }
 
+.tap_fixed .list_of_team {
+  padding: 0px !important;
+}
+
+.tap_fixed .active_section_tap {
+  border-bottom: 2px solid;
+}
+
 .product_planing .list_of_team {
+  padding: 2% 0px;
   color: #595959;
 }
 
@@ -2253,10 +2262,6 @@ body {
 .product_planing .list_of_team .team_icon img {
   font-size: 24px;
   margin: auto;
-}
-
-.product_planing .list_of_team .active_section_tap {
-  border-bottom: 2px solid;
 }
 
 .product_planing .list_of_team .active_section_tap .team_icon {
