--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2033,7 +2033,10 @@ body{
     // padding: 1% 0px;
     display: block !important;
     .list_of_team{
-        // padding: 1% 0px !important;
+        padding: 0px !important;
+    }
+    .active_section_tap{
+        border-bottom: 2px solid;
     }
 }
 
@@ -2044,7 +2047,7 @@ body{
             width: 69px;
             padding: 14px;
         }
-        // padding: 2% 0px;
+        padding: 2% 0px;
         color: #595959;
         .team_icon{
             z-index: 1;
@@ -2065,7 +2068,7 @@ body{
             }
         }
         .active_section_tap{
-            border-bottom: 2px solid;
+            // border-bottom: 2px solid;
             .team_icon{
                 border: 3px solid #fff !important;
                 background-color: #30b67b !important;
