tap header contant active link nav mobile tag menu responsive

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2687,6 +2687,66 @@ body {
   .our_approach_title .sub_text p {
     font-size: 19px;
   }
+  .product_planing {
+    padding: 40px 0px;
+  }
+  .product_planing .list_of_team .team_icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 30.5px;
+    margin: auto;
+  }
+  .product_planing .list_of_team .team_icon i {
+    font-size: 19px;
+  }
+  .product_planing .list_of_team .team_icon img {
+    width: 18px;
+  }
+  .product_planing .list_of_team .time_line {
+    width: 285px;
+    position: absolute;
+    top: 40%;
+    height: 2px;
+    background-color: #e6e6e7;
+  }
+  .product_planing .list_of_team p {
+    font-size: 13px;
+  }
+  .product_planing .section_tap {
+    margin: 0px 12px;
+  }
+  #tap-menu {
+    display: none !important;
+  }
+  .why_us .project_planing {
+    height: auto !important;
+  }
+  .why_us .project_planing .row {
+    padding-bottom: 10% !important;
+    padding-top: 10% !important;
+  }
+  .why_us .project_planing .mobile_tap_section {
+    padding: 26px 5px 6px 5px !important;
+  }
+  .why_us .project_planing .mobile_tap_section tapSection {
+    height: 100% !important;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-bottom: 20px;
+    padding: 0px !important;
+    padding: 0px 7px !important;
+    margin-right: -2px;
+  }
+  .why_us .project_planing .mobile_tap_section tapSection .active_code {
+    border-radius: 50px;
+  }
+  .why_us .project_planing .mobile_tap_section tapSection span {
+    font-size: 13px;
+    padding: 4px 14px;
+    background-color: rgba(0, 0, 0, 0.08);
+    border-radius: 50px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
